# ESPWebServer

./: .gitignore  LICENSE  README.md  SECURITY.md  copilot-instructions.md
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: board_support.yml  bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docker-publish.yml  firmware-test.yml
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/: build.py  firmware.py  health.py  ws.py
backend/app/core/: config.py  logging.py
backend/app/services/: builder.py  cache.py  template.py
backend/tests/: test_build.py  test_health.py
docker/: Dockerfile  docker-compose.dev.yml  docker-compose.prod.yml  entrypoint.sh  nginx.conf
docs/: architecture.md  board-support.md  troubleshooting.md
firmware/templates/esp32/: platformio.ini
firmware/templates/esp32/data/: index.html  script.js
firmware/templates/esp32/src/: main.cpp
firmware/templates/esp8266/: platformio.ini
firmware/templates/esp8266/data/: index.html  style.css
firmware/templates/esp8266/src/: main.cpp
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: BoardSelector.tsx  BuildLog.tsx  CodeEditor.tsx  FlashPanel.tsx  LivePreview.tsx
frontend/src/hooks/: useFlasher.ts  useWebSocket.ts
frontend/src/lib/: boards.ts
